--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 40px;
             padding: 20px;
             text-align: center;
             background-color: white;
             color: #333;
+            font-size: large;
         }
 
-        h1 {
+        h2 {
             color: #0366d6;
         }
 
@@ -26,7 +27,8 @@
 </head>
 <body>
     <header>
-        <h1> About me </h1>
+        <h1> Antonio Merino Gallardo </h1>
+        <h2> About me</h2>
     </header>
     <section>
         <p>
@@ -40,9 +42,9 @@
         </p>
         
         <p> 
-            <a href="mailto:antonio.merinogallardo@inf.ethz.ch"><i class="fas fa-envelope"></i> Email</a> |
-            <a href="https://github.com/amerigal" target="_blank"><i class="fab fa-github"></i> GitHub</a> | 
-            <a href="https://linkedin.com/in/amerigal" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a> 
+            <a href="mailto:antonio.merinogallardo@inf.ethz.ch" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> Email</a> |
+            <a href="https://github.com/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a> | 
+            <a href="https://linkedin.com/in/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a> 
         </p>
     </section>
     <footer>
