--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            margin-left: 20px;
+            margin-right: 20px;
             padding: 120px;
             text-align: center;
             background-color: white;
