--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-left: 500px;
+            margin-right: 500px;
             padding: 120px;
             text-align: center;
             background-color: white;
             color: #333;
-            font-size: large;
         }
 
         h2 {
@@ -31,7 +30,7 @@
         <h1> Antonio Merino Gallardo </h1>
         <h2> About me</h2>
     </header>
-    <section>
+    <section style="text-align:left; font-size:larger">
         <p>
             I'm a second year student of the Master in Computer Science at ETH Zürich. In particular, I'm pursuing the Secure and Reliable Systems Major, with a special interest in cryptography. 
         </p>
@@ -41,13 +40,12 @@
         <p>   
             Before coming to ETH, I completed a Double Bachelor Degree in Mathematics and Computer Science in the University of Granada.
         </p>
-        
-        <p> 
-            <a href="mailto:antonio.merinogallardo@inf.ethz.ch" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> Email</a> |
-            <a href="https://github.com/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a> | 
-            <a href="https://linkedin.com/in/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a> 
-        </p>
     </section>
+    <p> 
+        <a href="mailto:antonio.merinogallardo@inf.ethz.ch" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> Email</a> |
+        <a href="https://github.com/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a> | 
+        <a href="https://linkedin.com/in/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a> 
+    </p>
     <footer>
         <p> 2023, Antonio Merino Gallardo </p>
     </footer>
