--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin-left: 500px;
-            margin-right: 500px;
+            margin-left: 20%;
+            margin-right: 20%;
             padding: 120px;
             text-align: center;
             background-color: white;
