--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             background-color: white;
             color: #333;
         }
+        
+        @media screen and (max-width: 600px) {
+            body {
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
 
         h2 {
             color: #0366d6;
