--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         
         @media screen and (max-width: 600px) {
             body {
-                margin-left: 0;
-                margin-right: 0;
+                padding: 20px;
+                margin-left: 0%;
+                margin-right: 0%;
             }
         }
 
