--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-ezYbKlJe3Y6e5r+J3l4p5z1dVmHTAds5z1PEkFeAq4u0Pq4c4Fep09lCzQx1R9uN" crossorigin="anonymous">
-    <title> Antonio Merino Gallardo </title>
+    <title> Antonio Merino-Gallardo </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,27 +35,24 @@
 </head>
 <body>
     <header>
-        <h1> Antonio Merino Gallardo </h1>
+        <h1> Antonio Merino-Gallardo </h1>
         <h2> About me</h2>
     </header>
     <section style="text-align:left; font-size:larger">
         <p>
-            I'm a second year student of the Master in Computer Science at ETH Zürich. In particular, I'm pursuing the Secure and Reliable Systems Major, with a special interest in cryptography. 
+            I am a PhD student in Cryptography at IBM Research Zurich and the University of Potsdam since November 2024. I am advised by Dr. Vadim Lyubashevsky and Prof. Dr. Anja Lehmann.
         </p>
         <p>    
-            Recently, I worked on a semester project on Verifiable Fully Homomorphic Encryption in the <a href="https://pps-lab.com/" target="_blank" rel="noopener noreferrer"> Privacy Preserving Systems Lab</a> and wrote two <a href="https://pps-lab.com/blog/fhew_tfhe/" target="_blank" rel="noopener noreferrer"> blog posts </a> about it. Additionally, I'm working as a student teaching assistant for the <a href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?semkez=2023W&ansicht=ALLE&lerneinheitId=172077&lang=en" target="_blank" rel="noopener noreferrer"> Zero-Knowledge Proofs course</a>, mainly preparing notes for the course. 
-        </p>
-        <p>   
-            Before coming to ETH, I completed a Double Bachelor Degree in Mathematics and Computer Science in the University of Granada.
+            Previously, I completed a MSc in Computer Science at ETH Zurich and, before that, a Double Bachelor Degree in Mathematics and Computer Science at the University of Granada.
         </p>
     </section>
     <p> 
-        <a href="mailto:antonio.merinogallardo@inf.ethz.ch" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> Email</a> |
+        <a href="mailto:antonio@m-g.es" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i> Email</a> |
         <a href="https://github.com/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a> | 
         <a href="https://linkedin.com/in/amerigal" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a> 
     </p>
     <footer>
-        <p> 2023, Antonio Merino Gallardo </p>
+        <p> 2025, Antonio Merino-Gallardo </p>
     </footer>
 </body>
 </html>
