--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
             Previously, I completed a MSc in Computer Science at ETH Zurich and, before that, a Double Bachelor Degree in Mathematics and Computer Science at the University of Granada.
         </p>
     </section>
-    <section style="text-align:left; font-size:larger">
+    <header>
         <h2>Publications</h2>
+    </header>
+    <section style="text-align:left; font-size:larger">
         <p>
-            <b>Efficient Verifiable Mixnets from Lattices, Revisited.</b> Jonathan Bootle, Vadim Lyubashevsky, and Antonio Merino-Gallardo. 2025. In Public-Key Cryptography (PKC 2025). To appear.
+            <b>Efficient Verifiable Mixnets from Lattices, Revisited.</b> Jonathan Bootle, Vadim Lyubashevsky, and Antonio Merino-Gallardo. In the proceedings of PKC 2025. To appear.
         </p>
         <p>
-            <b>VFHE: Verifiable Fully Homomorphic Encryption.</b> Christian Knabenhans, Alexander Viand, Antonio Merino-Gallardo, and Anwar Hithnawi. 2024. In Proceedings of the 12th Workshop on Encrypted Computing & Applied Homomorphic Cryptography (WAHC '24).
+            <b>VFHE: Verifiable Fully Homomorphic Encryption.</b> Christian Knabenhans, Alexander Viand, Antonio Merino-Gallardo, and Anwar Hithnawi. In the proceedings of WAHC 2024.
         </p>
     </section>
     <p> 
