--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 </head>
 <body>
     <header>
-        <h1> <span>Antonio</span> <span>Merino-Gallardo</span> </h1>
+        <h1> 
+            <span>Antonio</span> 
+            <span>Merino-Gallardo</span> 
+        </h1>
         <h2> About me</h2>
     </header>
     <section style="text-align:left; font-size:larger">
