--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
         <h1> 
             <span>Antonio</span> 
-            <span>Merino-Gallardo</span> 
+            <span style="display:inline-block">Merino-Gallardo</span> 
         </h1>
         <h2> About me</h2>
     </header>
