--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <section style="text-align:left; font-size:larger">
         <p>
-            <b>Efficient Verifiable Mixnets from Lattices, Revisited.</b> Jonathan Bootle, Vadim Lyubashevsky, and Antonio Merino-Gallardo. In the proceedings of PKC 2025. To appear.
+            <b>Efficient Verifiable Mixnets from Lattices, Revisited.</b> Jonathan Bootle, Vadim Lyubashevsky, and Antonio Merino-Gallardo. In the proceedings of PKC 2025.
         </p>
         <p>
             <b>VFHE: Verifiable Fully Homomorphic Encryption.</b> Christian Knabenhans, Alexander Viand, Antonio Merino-Gallardo, and Anwar Hithnawi. In the proceedings of WAHC 2024.
